update resume link
 resume link change: drive to one drive
add new skills

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <p class="section__text__p2">Full Stack Developer</p>
       <div class="btn-container">
         <button class="btn btn-color-2"
-          onclick="window.open('https://drive.google.com/file/d/18sgkBUm-c5DQwxpkSFRe_mYYUf36C72e/view?usp=sharing')">
+          onclick="window.open('https://1drv.ms/b/c/62249dcca8dcf6f9/EU0zjr8VerdKqfVuGqbitaoB0tpXxsmmqS0jT8cnZ73Utg?e=G2z41B')">
           View Resume
         </button>
         <button class="btn btn-color-1" onclick="location.href='./#contact'">
@@ -230,6 +230,13 @@
                 <p>Intermediate</p>
               </div>
             </article>
+            <article>
+              <img src="./checkmark.png" alt="Experience icon" class="icon" />
+              <div>
+                <h3>Postman</h3>
+                <p>Intermediate</p>
+              </div>
+            </article>
           </div>
         </div>
 
@@ -238,6 +245,13 @@
           <h2 class="experience-sub-title">Tools & Others</h2>
           <div class="article-container">
 
+            <article>
+              <img src="./checkmark.png" alt="Experience icon" class="icon" />
+              <div>
+                <h3>Docker</h3>
+                <p>Intermediate</p>
+              </div>
+            </article>
             <article>
               <img src="./checkmark.png" alt="Experience icon" class="icon" />
               <div>
